Java 17を使う